--- a/frontEnd/vue/package.json
+++ b/frontEnd/vue/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@formkit/themes": "^1.0.0-beta.10",
+    "@formkit/vue": "^1.0.0-beta.10",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "cytoscape": "^3.22.1",
