--- a/frontEnd/vue/package.json
+++ b/frontEnd/vue/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "cytoscape": "^3.22.1",
+    "cytoscape-edgehandles": "^4.0.1",
     "express": "^4.18.1",
     "vue": "^3.2.13"
   },
