--- a/frontEnd/vue/package.json
+++ b/frontEnd/vue/package.json
@@ -15,10 +15,10 @@
     "cytoscape": "^3.22.1",
     "cytoscape-compound-drag-and-drop": "^1.1.0",
     "cytoscape-edgehandles": "^4.0.1",
-    "express": "^4.18.1",
     "typescript": "^4.8.2",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
+    "vue-router": "^4.1.5",
     "vue3-easy-data-table": "^1.4.15"
   },
   "devDependencies": {
